<?xml version="1.0"?>
<package>
  <name>bar</name>
  <version>0.1.0</version>
  <description>The bar package</description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <run_depend>boost</run_depend>
  <build_depend>boost-dev</build_depend>

</package>