<?xml version="1.0"?>
<package preprocessor="catkin_simple">
  <name>foo</name>
  <version>0.1.0</version>
  <description>The foo package</description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>bar</depend>
  <depend>baz</depend>
  <depend>ping</depend>
  <run_depend>boost</run_depend>
  <build_depend>boost-dev</build_depend>

</package>